# drm-lease-manager

./: .clang-format  README.md  meson.build  meson_options.txt
common/: dlm-protocol.c  dlm-protocol.h  log.c  log.h  meson.build  socket-path.c  socket-path.h
common/test/: test-helpers.c  test-helpers.h
drm-lease-manager/: drm-lease.h  lease-manager.c  lease-manager.h  lease-server.c  lease-server.h  main.c  meson.build
drm-lease-manager/test/: lease-manager-test.c  lease-server-test.c  meson.build  test-drm-device.c  test-drm-device.h  test-socket-client.c  test-socket-client.h
examples/: meson.build
examples/dlm-client-test/: dlm-client-test.c  meson.build
libdlmclient/: dlmclient.c  dlmclient.h  meson.build
libdlmclient/docs/: Doxyfile.in  meson.build
libdlmclient/test/: libdlmclient-test.c  meson.build  test-socket-server.c  test-socket-server.h
subprojects/: fff.wrap
subprojects/packagefiles/fff-1.0/: meson.build
